--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,8 @@
     <title>examples</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <json-viewer :value="jsonData" :show-copy="true" icon-prefix="ion" :show-bigger="true"></json-viewer>
+    </div>
 </body>
 </html>
